# latextomd

./: .gitignore  README.md  docusaurus.config.js  mkdocs.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  sidebars.js  temp.tex
.github/workflows/: main.yml
docs/: 01_examples.md  02_cli.md  03_live_cycle.md  04_config.md  basic-examples.md  basic-usage.md  basic-usage.mdx  cli.md  doc1.mdx  doc2.md  index.md  installation.md  installation.mdx  life-cycle.mdx  options.md
latextomd/: __main__.py  cli.py  config.py  latexblocks.py  latextomd.py  postpandoc.py  prepandoc.py  soup.py  text_manipulation.py
samples/: Cours.tex  TS-BacBlanc-2020-Spe.md  TS-BacBlanc-2020-Spe.tex  TS-Complexes-Loga.md  TS-Variables.md  TS-Variables.tex  TS-integrales.md  TS-integrales.tex  prepandoc.aux  prepandoc.md  prepandoc.tex  sample-definition.md  sample-definition.tex  sample-math-mode.md  sample-math-mode.tex  sample-tikz.md  sample-tikz.tex  sample.md  sample.tex  sample_comments.tex  sample_delete_commands.md  sample_delete_commands.tex  sample_enumerate.md  sample_enumerate.tex  sample_enumertate.md  sample_parbox.tex  sample_preamble.tex  sample_replace_simple.md  temp.dvi  temp.md  temp.tex
samples/temp/: pandoc_raw.tex  prepandoc.tex  temp.md  temp.tex
tests/: sample.tex  test-regex.py  test_latexblocks.py  test_latextomd.py  test_soup.py
tests/samples/: TS-Complexes-Loga.md  prepandoc.tex  sample.md  sample.tex  sample_commands.md  sample_commands.tex  sample_parbox.md  (+7 more)
website/: docusaurus.config.js  package-lock.json  package.json  sidebars.js
(+14 files in other folders)
